--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Node.js example server starter project",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "set NODE_ENV=development&& node index.js",
+    "start-prod": "set NODE_ENV=production&& node index.js"
   },
   "dependencies": {
     "cors": "2.8.5",
